<resources>
    <string name="app_name">Rent A Tool</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="header_title">Ahmad Rent A Tool</string>
    <string name="header_text">Farhan Ali</string>
    <string name="name_of_tool">Name of Tool</string>
    <string name="on_rent">On Rent</string>
    <string name="in_stock">In Stock</string>
    <string name="add_new_customer">Add New Customer</string>
    <string name="customer_name">Customer Name</string>
    <string name="farhan_sarfraz">Farhan Sarfraz</string>
    <string name="ahmad_rent_a_tool">Ahmad Rent A Tool</string>
    <string name="profile_picture">profile_picture</string>
    <string name="all_fields_must_be_filled">All fields must be filled</string>
    <string name="cnic_no">CNIC No.</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="construction_details">Construction Details</string>
    <string name="construction_place">Construction Place</string>
    <string name="contractor_name">Contractor Name</string>
    <string name="contractor_phone">Contractor Phone</string>
    <string name="owner_name">Owner Name</string>
    <string name="owner_phone">Owner Phone</string>
    <string name="stock">Stock</string>
    <string name="add_new_tool">Add New Tool</string>
    <string name="enter_tool_name">Enter tool name</string>
    <string name="enter_number_of_items">Enter number of items</string>
    <string name="enter_rent_price">Enter rent price</string>
    <string name="manager">Manager</string>
    <string name="customers">Customers</string>
    <string name="about">About</string>
    <string name="saved_in_db">Data saved in database successfully</string>
    <string name="select_tools_and_enter_quantity">Select Tools and Enter Quantity</string>
    <string name="confirm_selection">Confirm Selection</string>
    <string name="customer_details">Customer Details</string>
    <string name="add_photo">Add Photo</string>
    <string name="view_receipt">View Receipt</string>
    <string name="share_receipt">Share Receipt</string>
    <string name="receipt_generated">Receipt generated successfully</string>
    <string name="tools">Tools</string>
    <string name="rentals">RENTALS</string>
    <string name="add_tool">Add Tool</string>
    <string name="tool_name">Tool Name</string>
    <string name="description">Description</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="rent_per_day">Rent per Day</string>
    <string name="save">Save</string>
    <string name="quantity">Quantity</string>
    <string name="contractor_details">Contractor Details</string>
    <string name="submit">Submit</string>
    <string name="save_tool">Save Tool</string>
    <string name="muhammad_imran">Muhammad Imran</string>
    <string name="ali_hussain">Ali Hussain</string>
    <string name="afnan_mumtaz">Afnan Mumtaz</string>
    <string name="select_tools">Select Tools</string>
    <string name="estimated_date">Estimated Date</string>
    <string name="return_date">Return Date</string>
    <string name="rent_tool">Rent Tool</string>
    <string name="return_tool">Return Tool</string>
    <string name="welcome">Welcome</string>
    <string name="update_customer">Update Customer</string>
    <string name="call">Call</string>
    <string name="available">Available</string>
    <string name="rent">Rent</string>
    <string name="condition">Condition</string>
    <string name="new_condition">New</string>
    <string name="old">Old</string>
    <string name="old_condition">Old</string>
    <!--    add tools strings -->
    <string name="please_enter_tool_name">Please enter the tool name</string>
    <string name="please_enter_quantity_of_tool">Please enter the quantity of tool</string>
    <string name="please_enter_the_rent_price">Please enter the rent price</string>
    <string name="is_saved_successfully">%1$s is saved successfully</string>
    <string name="please_enter_in_all_fields">Please enter in all fields</string>
    <string name="please_enter_customer_name">Please enter customer name</string>
    <string name="please_enter_customer_cnic">Please enter customer CNIC</string>
    <string name="please_enter_customer_phone_no">Please enter customer phone no.</string>
    <string name="please_enter_contractor_name">Please enter contractor name</string>
    <string name="please_enter_construction_place">Please enter construction place</string>
    <string name="please_enter_contractor_phone_no">Please enter contractor phone no.</string>
    <string name="please_enter_owner_name">Please enter owner name</string>
    <string name="please_enter_owner_phone">Please enter owner phone</string>
    <string name="no_dialer_app_found">No dialer app found.</string>
    <string name="add_to_customers">Add to customers</string>
    <string name="please_select_a_customer">Please select a customer</string>
    <string name="please_select_estimated_return_date">Please select estimated return date</string>
    <string name="please_select_some_tools">Please select some tools</string>
    <string name="remind_him">Remind him</string>
    <string name="call_him">Call him</string>
    <string name="pdf">Pdf</string>
    <string name="contact_customer">Contact Customer</string>
    <string name="customer_detail">Customer Details</string>
    <string name="owner_details">Owner Details</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="urdu">اردو</string>
    <string name="select_app_language">Select App Language:</string>
    <string name="rent_tools">RENT TOOLS</string>
    <string name="edit_the_customer">Edit the customer</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="ledger">LEDGER</string>
    <string name="search_customer">Search customer by name or Id</string>
    <string name="search_tool_by_name">Search tool by name</string>
    <string name="search_tools_by_name">Search tools by name</string>
    <string name="active">Active</string>
    <string name="settings">Settings</string>
    <string name="active_rentals">Active Rentals</string>
    <string name="total_rent">Total Rent</string>
    <string name="active_orders">Active Orders</string>
    <string name="returned_orders">Returned Orders</string>
    <string name="empty_state_icon_description">empty_state</string>
    <string name="empty_state_default_title">No Rentals Record</string>
    <string name="empty_state_default_message">Add new rental by clicking Rent Tools</string>
    <string name="save_and_exit">Save and Exit</string>
    <string name="save_and_new">Save and New</string>

</resources>