<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_pdf_report"
        android:icon="@drawable/menu_pdf"
        android:title="@string/pdf"
        app:showAsAction="always" />

    <item
        android:id="@+id/edit_menu"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit_the_customer"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/remind_menu"
        android:title="@string/remind_him"
        android:icon="@drawable/icon_sms"
        app:showAsAction="never" />

    <item
        android:id="@+id/call_menu"
        android:title="@string/call_him"
        android:icon="@drawable/icon_phone"
        app:showAsAction="never" />


</menu>