<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <item
        android:id="@+id/customersListFragment"
        android:icon="@drawable/customer_icon"
        android:title="@string/customers" />

    <item
        android:id="@+id/stockFragment"
        android:icon="@drawable/tools_icon"
        android:title="@string/stock" />


    <!--    todo later these will be deleted-->
    <item
        android:id="@+id/mockDb"
        android:title="Insert Mock Customers" />

    <item
        android:id="@+id/mockTools"
        android:title="Insert Mock Tools" />

    <item
        android:id="@+id/aboutApp"
        android:icon="@drawable/about_icon"
        android:title="@string/about" />
</menu>


