<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_new_tool"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
         />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tool_name_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_tool_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_tool_name"
            android:textSize="14sp"
            android:inputType="text"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Number of Items Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_of_items"
            android:textSize="14sp"
            android:inputType="number"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/condition_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/condition"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <RadioGroup
            android:id="@+id/rg_condition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp">

            <RadioButton
                android:id="@+id/rb_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_condition"
                android:checked="true"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/rb_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old"
                android:textSize="14sp" />


        </RadioGroup>


    </LinearLayout>


    <!-- Rent Price Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_rent_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_rent_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_rent_price"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:padding="12dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save_tool"
         />

</LinearLayout>
