<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    >

    <!-- Profile Image -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/profileCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="60dp"
        app:strokeWidth="3dp"
        app:strokeColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp">

        <ImageView
            android:id="@+id/iv_customer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_picture"
            android:scaleType="centerCrop"
            android:src="@drawable/place_holder_image" />
    </com.google.android.material.card.MaterialCardView>

    <!-- Customer Name -->
    <TextView
        android:id="@+id/tvCustomerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/muhammad_imran"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profileCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Detail Section -->
    <androidx.cardview.widget.CardView
        android:id="@+id/detailsCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tvCustomerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- CNIC -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cnic_no"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_cnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="12345-6789012-3"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />

            <!-- Cell Number -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customer_phone"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="+123456789"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />

            <!-- Place of Construction -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/construction_place"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_place"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="123 Main Street"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contractor_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_contractor_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/ali_hussain"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contractor_phone"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_contractor_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="123456789"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_name"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_owner_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/afnan_mumtaz"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owner_phone"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_owner_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="987654321"
                android:textColor="@color/gray_dark"
                android:layout_marginBottom="12dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
