<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:scrollbars="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">



        <!-- Profile Picture Card -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:elevation="6dp"
            app:cardCornerRadius="60dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/customerImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/profile_picture"
                android:src="@drawable/place_holder_image"
                android:scaleType="centerCrop" />
        </com.google.android.material.card.MaterialCardView>



        <!-- Customer Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_customer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="#B0BEC5"
                android:nextFocusDown="@id/et_cnic" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CNIC Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cnic_no"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_cnic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cell Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_phone"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_customer_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:nextFocusDown="@id/et_construction_place" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Place of Construction -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/construction_place"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_construction_place"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>



        <!-- Contractor Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contractor_name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contractor_name"
                android:layout_width="match_parent"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:nextFocusDown="@id/et_contractor_cell" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Contractor Cell Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contractor_phone"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_contractor_cell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:nextFocusDown="@id/et_owner_name" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Owner Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner_name"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_owner_name"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:nextFocusDown="@id/et_owner_cell" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Owner Cell Number -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/owner_phone"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="1dp"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_owner_cell"
                android:layout_width="match_parent"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>
</ScrollView>
